--- a/public/index.html
+++ b/public/index.html
@@ -42,16 +42,6 @@
     </div>
   </header>
   <div class="container">
-    <div class="toggle-container">
-      <div class="toggle-wrapper">
-        <label class="switch">
-          <input type="checkbox" id="vegetarianMode">
-          <span class="slider round"></span>
-        </label>
-        <label for="vegetarianMode">Vegetarian Mode</label>
-      </div>
-      <p id="vegetarianDescription" class="vegetarian-description">肉、魚介類等も含めた全ての代用品が提示されます</p>
-    </div>
     <div class="search-container">
       <input type="text" id="urlInput" placeholder="https://cookpad.com/jp/recipes/...">
       <button id="fetchRecipe">送信</button>
@@ -66,6 +56,16 @@
         <div class="ingredients">
           <div class="ingredients-header">
             <h2>材料</h2>
+            <div class="toggle-container">
+              <div class="toggle-wrapper">
+                <label for="vegetarianMode"><span class="veg-box">ベジ</span> モード</label>
+                <label class="switch">
+                  <input type="checkbox" id="vegetarianMode">
+                  <span class="slider round"></span>
+                </label> 
+              </div>
+              <p id="vegetarianDescription" class="vegetarian-description">肉、魚介類等も含め<br>全ての代用品が提示されます</p>
+            </div>
             <input type="checkbox" id="checkAll" class="check-all-button" style="display: none;">
           </div>
           <div class="ingredients-content">
