--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
     <!-- Modal for selecting a substitute -->
     <div id="substituteModal" class="modal">
       <div class="modal-content">
-        <span class="close">&times;</span>
+        <span id="closeSubstituteModal" class="close">&times;</span>
         <h2>代用品を選択してください</h2>
         <form id="substituteForm">
           <ul id="substituteList"></ul>
