--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
       <!-- Wide screen menu -->
       <nav class="wide-screen-menu">
         <ul class="header-buttons">
-          <li id="loginButton">ログイン</li>
-          <li id="registerButton">アカウントを作る</li>
-          <li id="logoutButton">ログアウト</li>
+          <li id="loginButton" class="logged-out">ログイン</li>
+          <li id="registerButton" class="logged-out">アカウントを作る</li>
+          <li id="logoutButton" class="logged-in">ログアウト</li>
         </ul>
       </nav>
       <!-- Narrow screen menu -->
@@ -34,9 +34,9 @@
             <button id="closeMenuButton">×</button>
           </div>
           <ul>
-            <li id="hamburgerRegisterLink">アカウントを作る</li>
-            <li id="hamburgerLoginLink">ログイン</li>
-            <li id="hamburgerLogoutLink">ログアウト</li>
+            <li id="hamburgerRegisterLink" class="logged-out">アカウントを作る</li>
+            <li id="hamburgerLoginLink" class="logged-out">ログイン</li>
+            <li id="hamburgerLogoutLink" class="logged-in">ログアウト</li>
           </ul>
         </div>
       </div>
