--- a/public/favorite-recipes.html
+++ b/public/favorite-recipes.html
@@ -6,6 +6,7 @@
     <title>お気に入りのレシピ</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="favorite-recipes.css">
   </head>
 <body>
   <header>
@@ -43,17 +44,56 @@
   </header>
   <div class="container">
     <h1>お気に入りのレシピ</h1>
+    <p>タイトルは最後にアクセスされた時点のものが表示されています。<br>それ以降にタイトルが変更されている場合には、再度レシピ検索すると最新のタイトルに更新されます。</p>
+    <div class="filter-bar">
+      <input type="text" id="filterInput" placeholder="レシピを絞り込む">
+    </div>
+    <div id="loadingIndicator" style="display: none;">LOADING...</div>
     <ul id="favoriteList"></ul>
+    <div id="noFavoritesMessage" style="display: none;">お気に入りのレシピが登録されていません</div>
+    <div class="pagination">
+      <button id="prevButton" disabled>Prev</button>
+      <span id="pageIndicator">Page 1/1</span>
+      <button id="nextButton" disabled>Next</button>
+    </div>
   </div>
-  <script type="module">    
+  <!-- Logout Modal -->
+  <div id="logoutModal" class="modal">
+    <div class="modal-content" id="logoutModalContent">
+      <span id="closeLogoutModal" class="close">&times;</span>
+      <!-- Logout modal content -->
+      <p>ログアウトしますか？</p>
+      <button id="confirmLogoutButton">ログアウト</button>
+      <button id="cancelLogoutButton">キャンセル</button>
+    </div>
+  </div>
+
+  <!-- Confirm Delete Modal -->
+  <div id="confirmDeleteModal" class="modal">
+    <div class="modal-content">
+      <span id="closeConfirmDeleteModal" class="close">&times;</span>
+      <p>本当に削除しますか？</p>
+      <button id="confirmDeleteButton">削除</button>
+      <button id="cancelDeleteButton">キャンセル</button>
+    </div>
+  </div>
+
+  <script type="module">
     import { setupHamburgerMenu, setupModals } from './scripts/setup.js';
     import { renderWideScreenMenu, renderHamburgerMenu } from './scripts/applyLoggedInStyles.js';
+
+    let recipeIdToDelete = null;
+    let currentPage = 1;
+    const recipesPerPage = 10;
+    let searchQuery = ''; // Initialize searchQuery as an empty string
+    let allRecipes = []; // Store all recipes
 
     // Function to check token validity
     function checkToken() {
       const token = localStorage.getItem('token');
       if (!token) {
         alert('トークンが存在しません。ログインし直してください');
+        localStorage.setItem('showLoginModal', 'true');
         window.location.href = '/';
         return false;
       }
@@ -64,6 +104,7 @@
         if (Date.now() >= exp) {
           alert('トークンの有効期限が切れました。ログインし直してください');
           localStorage.removeItem('token');
+          localStorage.setItem('showLoginModal', 'true');
           window.location.href = '/';
           return false;
         }
@@ -71,6 +112,7 @@
         console.error('Invalid token:', e);
         alert('トークンが無効です。ログインし直してください');
         localStorage.removeItem('token');
+        localStorage.setItem('showLoginModal', 'true');
         window.location.href = '/';
         return false;
       }
@@ -81,34 +123,26 @@
     if (checkToken()) {
       setupHamburgerMenu();
       setupModals();
-      renderWideScreenMenu();
+      renderWideScreenMenu('favorite-recipes');
       renderHamburgerMenu('favorite-recipes');
 
       // Function to make an authenticated API call
       async function fetchWithAuth(url, options = {}) {
-        // console.log('fetchWithAuth called'); // Log the function call
-
         const token = localStorage.getItem('token');
         if (!token) {
           console.error('No token found');
           return;
         }
 
-        // console.log('Token found:', token); // Log the token
-
         const headers = {
           'Authorization': `Bearer ${token}`,
           'Content-Type': 'application/json',
         };
 
-        // console.log('Making fetch request to:', url); // Log the URL
-
         const response = await fetch(url, {
           ...options,
           headers,
         });
-
-        // console.log('Response status:', response.status); // Log the response status
 
         if (!response.ok) {
           if (response.status === 401) {
@@ -123,39 +157,179 @@
       }
 
       // Function to fetch favorite recipes
-      async function fetchFavoriteRecipes() {
+      async function fetchFavoriteRecipes(page = 1, searchQuery = '') {
         try {
-          console.log('Fetching favorite recipes'); // Log the function call
+          const loadingIndicator = document.getElementById('loadingIndicator');
+          loadingIndicator.style.display = 'block'; // Show loading indicator
+
+          if (allRecipes.length === 0) {
+            // Fetch all recipes only if not already fetched
+            console.log('Fetching favorite recipes'); // Log the function call
+            const data = await fetchWithAuth('/api/favorites/all');
+            allRecipes = data || [];
+            console.log('Favorite recipes:', allRecipes);
+          }
+
           const data = await fetchWithAuth('/api/favorites/all');
-          if (data) {
-            console.log('Favorite recipes:', data);
-            const favoriteList = document.getElementById('favoriteList');
+          const favoriteList = document.getElementById('favoriteList');
+          const noFavoritesMessage = document.getElementById('noFavoritesMessage');
+          const prevButton = document.getElementById('prevButton');
+          const nextButton = document.getElementById('nextButton');
+          const pageIndicator = document.getElementById('pageIndicator');
+
+          if (data && data.length > 0) {
             favoriteList.innerHTML = '';
-            data.forEach(recipe => {
-              const li = document.createElement('li');
-              li.textContent = recipe.name; // Adjust based on your data structure
-              favoriteList.appendChild(li);
+
+            // Filter recipes based on search query
+            const filteredRecipes = data.filter(recipe => recipe.title.includes(searchQuery));
+
+            const startIndex = (page - 1) * recipesPerPage;
+            const endIndex = startIndex + recipesPerPage;
+            const paginatedRecipes = filteredRecipes.slice(startIndex, endIndex);
+
+            // Display current index before fetching titles
+            const totalPages = Math.ceil(filteredRecipes.length / recipesPerPage);
+            pageIndicator.textContent = `Page ${page}/${totalPages}`;
+
+            // Display all recipes at once
+            paginatedRecipes.forEach(({ recipeId, url, title }) => {
+              const listItem = document.createElement('li');
+              listItem.innerHTML = `
+                <a href="${url}" target="_blank">${title}</a>
+                <div class="fav-recipe-buttons">
+                  <button class="fav-search-recipe-button" data-recipe-url="${url}">検索</button>
+                  <button class="delete-button" data-recipe-id="${recipeId}">削除</button>
+                </div>
+              `;
+              favoriteList.appendChild(listItem);
             });
+
+            // Add event listeners to delete buttons
+            document.querySelectorAll('.delete-button').forEach(button => {
+              button.addEventListener('click', (event) => {
+                if (!checkToken()) return; // Check token validity before proceeding
+                recipeIdToDelete = event.target.getAttribute('data-recipe-id');
+                openConfirmDeleteModal();
+              });
+            });
+
+            // Add event listeners to search recipe buttons for favorite page
+            document.querySelectorAll('.fav-search-recipe-button').forEach(button => {
+              button.addEventListener('click', (event) => {
+                const recipeUrl = event.target.getAttribute('data-recipe-url');
+                localStorage.setItem('recipeUrl', recipeUrl);
+                window.location.href = '/';
+              });
+            });
+
+            // Update pagination buttons
+            prevButton.disabled = page === 1;
+            nextButton.disabled = page === totalPages;
+
+            prevButton.onclick = () => fetchFavoriteRecipes(page - 1);
+            nextButton.onclick = () => fetchFavoriteRecipes(page + 1);
+
+            // Show pagination and page indicator
+            prevButton.style.display = 'inline-block';
+            nextButton.style.display = 'inline-block';
+            pageIndicator.style.display = 'inline-block';
+            noFavoritesMessage.style.display = 'none';
+          } else {
+            // No favorite recipes found
+            favoriteList.innerHTML = '';
+            prevButton.style.display = 'none';
+            nextButton.style.display = 'none';
+            pageIndicator.style.display = 'none';
+            noFavoritesMessage.style.display = 'block';
           }
         } catch (error) {
           console.error('Error fetching favorite recipes:', error);
+        } finally {
+          const loadingIndicator = document.getElementById('loadingIndicator');
+          if (loadingIndicator) {
+            loadingIndicator.style.display = 'none'; // Hide loading indicator
+          }
         }
       }
 
-      // Call the function to fetch favorite recipes
-      fetchFavoriteRecipes();
-    }
-  </script>
+      // Function to remove a recipe from the favorite list
+      async function removeFromFavorites(url) {
+        const token = localStorage.getItem('token');
+        console.log('Removing recipe from favorites:', url);
+        const response = await fetch(`/api/favorites?url=${url}`, {
+          method: 'DELETE',
+          headers: {
+            'Authorization': `Bearer ${token}`
+          }
+        });
+        const data = await response.json();
+        console.log("Completed deleting:", data);
+        return data;
+      }
 
-  <!-- Logout Modal -->
-  <div id="logoutModal" class="modal">
-    <div class="modal-content" id="logoutModalContent">
-      <span id="closeLogoutModal" class="close">&times;</span>
-      <!-- Logout modal content -->
-      <p>ログアウトしますか？</p>
-      <button id="confirmLogoutButton">ログアウト</button>
-      <button id="cancelLogoutButton">キャンセル</button>
-    </div>
-  </div>
+      // Function to open the confirm delete modal
+      function openConfirmDeleteModal() {
+        const confirmDeleteModal = document.getElementById('confirmDeleteModal');
+        if (confirmDeleteModal) {
+          confirmDeleteModal.style.display = 'block';
+        }
+      }
+
+      // Function to close the confirm delete modal
+      function closeConfirmDeleteModal() {
+        const confirmDeleteModal = document.getElementById('confirmDeleteModal');
+        if (confirmDeleteModal) {
+          confirmDeleteModal.style.display = 'none';
+        }
+      }
+
+     // Add event listeners for closing modals
+      document.getElementById('closeConfirmDeleteModal').addEventListener('click', closeConfirmDeleteModal);
+
+      // Close the confirm delete modal when clicking outside of it
+      window.addEventListener('click', (event) => {
+        const confirmDeleteModal = document.getElementById('confirmDeleteModal');
+        if (event.target === confirmDeleteModal) {
+          closeConfirmDeleteModal();
+        }
+      });
+
+      // Handle confirm delete action
+      document.getElementById('confirmDeleteButton').addEventListener('click', async () => {
+        if (recipeIdToDelete) {
+          const listItem = document.querySelector(`button[data-recipe-id="${recipeIdToDelete}"]`).parentElement.parentElement;
+          if (listItem) {
+            const urlElement = listItem.querySelector('a');
+            if (urlElement) {
+              const url = urlElement.href;
+              await removeFromFavorites(url);
+              fetchFavoriteRecipes(); // Refresh the list
+              closeConfirmDeleteModal();
+            } else {
+              console.error('URL element not found');
+            }
+          } else {
+            console.error('List item not found');
+          }
+        }
+      });
+
+      // Handle cancel delete action
+      document.getElementById('cancelDeleteButton').addEventListener('click', () => {
+        recipeIdToDelete = null;
+        closeConfirmDeleteModal();
+      });
+
+      // Add event listener for search input
+      document.getElementById('filterInput').addEventListener('input', () => {
+        searchQuery = document.getElementById('filterInput').value.trim();
+        fetchFavoriteRecipes(1, searchQuery);
+      });
+
+      // Fetch and display favorite recipes on page load
+      document.addEventListener('DOMContentLoaded', () => fetchFavoriteRecipes(currentPage));
+    }
+  window.closeConfirmDeleteModal = closeConfirmDeleteModal;
+  </script>
 </body>
 </html>
