--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,8 @@
       <p class="input-instruction">クックパッドのURLを入力してください</p>
     </div>
     <p id="errorMessage" class="error-message"></p>
-    <div id="recipe">
+    <div id="loadingSpinner" class="loading-spinner" style="display: none;"></div>
+    <div class="recipe" style="display: none;">
       <div class="recipe-name-box">
       </div>
       <div class="recipe-content">
